chore: main 同步进 dev 后收敛分叉，合入 CI/Qodana 配置与 reporting 修复 (#12)
* fix(backend): rebuildProjection 移除客户端 householdId 修复跨家庭越权 (IDOR)

POST /api/v1/reporting/projection/rebuild 原签名收 @RequestParam UUID
householdId 但未与 principal 认证的家庭比对，且 requireActiveMember 的
返回值被丢弃，导致家庭 A 的管理员可触发家庭 B 的投影重建（IDOR）。

修复：从 principal 的活跃成员记录推导 householdId，删除请求参数。同时
新增 ReportingControllerTest#rebuildProjectionIgnoresClientSupplied
HouseholdId 作为回归断言，确保任何客户端传入的 householdId 都不会被
透传给 projectionRebuilder。

前端 rebuildProjection() 同步移除 householdId 参数及 sessionStore
的家庭回查分支。

* fix(backend): catalog 字典端点改用 DTO 避免实体内部字段泄露

Category/Brand/Unit/Tag 共 8 个端点原本将 MyBatis-Plus 实体直接作为 HTTP
响应返回，导致 nameNormalized、createdAt、updatedAt 等实体内部字段泄露，
违反 'API 返回 DTO' 架构契约。

新增 4 个嵌套 record Response（CategoryResponse/BrandResponse/UnitResponse/
TagResponse），每个配备 static from(entity) 工厂；端点签名改为返回 DTO，
entity -> DTO 转换在 controller 边界完成。模式与 MemberController.java:80-89
保持一致。

字段策略：保留前端 types/catalog.ts 已声明的 id/householdId/name/status/
version/sortOrder/parentId/decimalScale；剥离 nameNormalized（仅服务端
NFKC 去重检查使用）与 createdAt/updatedAt（前端未使用）。

前端 mock 数据 (ItemsPage.test.ts) 与类型声明完全兼容，无需调整。

* refactor(backend): inventory 列表端点统一通过 helper 方法转换响应

GET /stock-positions、GET /lots、GET /movements（非 lotId 分支）原本将
SQL join 结果记录（StockPositionWithDetails、LotWithDetails）或 MyBatis
实体（MovementEntity）直接放入 items 列表，绕过统一的 DTO 转换层。
GET /stocktakes 已使用 toStocktakeResponse，无须改动。

新增 3 个私有 helper：
  - toStockPositionResponse(StockPositionWithDetails)
  - toLotSummaryResponse(LotWithDetails)
  - toMovementEntityResponse(MovementEntity)

list 端点改为 .map(this::toXxxResponse).toList()，与已有 toLotResponse /
toStocktakeResponse / toMovementResponse 风格一致。toMovementEntityResponse
从原 listMovements 内联 18 行 lambda 提取而来，剥离 householdId 等实体
内部字段。

行为不变：JSON 形状（字段集合与顺序）完全保持，仅重构调用路径。
Integration test 断言（$.items[0].type、$.items[0].id、$.items[0].status）
与前端 types/inventory.ts 均不受影响。

* fix(frontend): 恢复后端错误文案展示

* docs: 文档架构重组 — superpowers 提炼为 ADR 011-017，删除 plans/notes/sp