@@ -14,6 +14,7 @@ import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBody;
 
+import java.nio.charset.StandardCharsets;
 import java.time.OffsetDateTime;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -48,7 +49,7 @@ class ReportingController {
             @RequestParam String q,
             @RequestParam(defaultValue = "5") int limitPerGroup) {
         var member = householdApi.requireActiveMember(principal.getAccountId());
-        int limit = Math.min(Math.max(limitPerGroup, 1), 20);
+        int limit = Math.clamp(limitPerGroup, 1, 20);
         return searchService.search(member.householdId(), q.trim(), limit);
     }
 
@@ -66,7 +67,7 @@ class ReportingController {
             @RequestParam(required = false) UUID brandId) {
         var member = householdApi.requireActiveMember(principal.getAccountId());
         var result = reportService.stockByLocation(member.householdId(),
-                Math.max(page, 1), Math.min(Math.max(pageSize, 1), 100),
+                Math.max(page, 1), Math.clamp(pageSize, 1, 100),
                 itemId, categoryId, locationId, brandId);
         return toPageResponse(result);
     }
@@ -82,7 +83,7 @@ class ReportingController {
             @RequestParam(required = false) UUID locationId) {
         var member = householdApi.requireActiveMember(principal.getAccountId());
         var result = reportService.expiringLots(member.householdId(),
-                Math.max(page, 1), Math.min(Math.max(pageSize, 1), 100),
+                Math.max(page, 1), Math.clamp(pageSize, 1, 100),
                 Math.max(withinDays, 1), itemId, locationId);
         return toPageResponse(result);
     }
@@ -96,7 +97,7 @@ class ReportingController {
             @RequestParam(required = false) UUID categoryId) {
         var member = householdApi.requireActiveMember(principal.getAccountId());
         var result = reportService.lowStock(member.householdId(),
-                Math.max(page, 1), Math.min(Math.max(pageSize, 1), 100), categoryId);
+                Math.max(page, 1), Math.clamp(pageSize, 1, 100), categoryId);
         return toPageResponse(result);
     }
 
@@ -113,7 +114,7 @@ class ReportingController {
             @RequestParam(required = false) String type) {
         var member = householdApi.requireActiveMember(principal.getAccountId());
         var result = reportService.stockChanges(member.householdId(),
-                Math.max(page, 1), Math.min(Math.max(pageSize, 1), 100),
+                Math.max(page, 1), Math.clamp(pageSize, 1, 100),
                 from, to, itemId, locationId, type);
         return toPageResponse(result);
     }
@@ -131,7 +132,7 @@ class ReportingController {
             @RequestParam(required = false) UUID operatorAccountId) {
         var member = householdApi.requireActiveMember(principal.getAccountId());
         var result = reportService.movements(member.householdId(),
-                Math.max(page, 1), Math.min(Math.max(pageSize, 1), 100),
+                Math.max(page, 1), Math.clamp(pageSize, 1, 100),
                 from, to, itemId, type, operatorAccountId);
         return toPageResponse(result);
     }
@@ -146,13 +147,20 @@ class ReportingController {
             @RequestParam Map<String, String> params) {
         var member = householdApi.requireActiveMember(principal.getAccountId());
 
-        String filename = "zija-" + reportKey + "-" + System.currentTimeMillis() + ".csv";
+        // 在写入任何响应头之前校验 reportKey，避免未校验的用户输入进入 Content-Disposition 头
+        if (!exportService.isSupportedReportKey(reportKey)) {
+            throw new IllegalArgumentException("Unknown reportKey: " + reportKey);
+        }
+
+        // 响应头不应回显用户输入：filename 仅由服务端常量生成，不含 @PathVariable。
+        String filename = "zija-export-" + System.currentTimeMillis() + ".csv";
         StreamingResponseBody body = out -> exportService.exportToStream(
                 member.householdId(), reportKey, params, out);
 
         return ResponseEntity.ok()
                 .contentType(MediaType.parseMediaType("text/csv; charset=utf-8"))
-                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + filename + "\"")
+                .header(HttpHeaders.CONTENT_DISPOSITION,
+                        ContentDisposition.attachment().filename(filename, StandardCharsets.UTF_8).build().toString())
                 .body(body);
     }
 
